OSIS-1660 - Adaptation des listes dans les templates de dissertation aux changement dans la DB

--- a/templates/dissertations_wait_list.html
+++ b/templates/dissertations_wait_list.html
@@ -94,8 +94,8 @@
                             <span class="label label-default">{{ dissertation.dissertation.get_status_display }}</span>
                             {% endif %}
                         </td>
-                        <td>{{ dissertation.dissertation.offer_year_start.acronym }}</td>
-                        <td>{{ dissertation.dissertation.offer_year_start.academic_year }}</td>
+                        <td>{{ dissertation.dissertation.education_group_year_start.acronym }}</td>
+                        <td>{{ dissertation.dissertation.education_group_year_start.academic_year }}</td>
                       </tr>
                     {% endfor %}
                   </table>
