--- a/templates/manager_informations_detail_list.html
+++ b/templates/manager_informations_detail_list.html
@@ -61,7 +61,7 @@
                     <td><a href="{% url 'manager_dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">{{ adviser_list_dissertation.dissertation.title }}</a></td>
                     <td>{{ adviser_list_dissertation.dissertation.author }}</td>
                     <td>{{ adviser_list_dissertation.dissertation.get_status_display }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.offer_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start}}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -84,7 +84,7 @@
                     <td><a href="{% url 'manager_dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">{{ adviser_list_dissertation.dissertation.title }}</a></td>
                     <td>{{ adviser_list_dissertation.dissertation.author }}</td>
                     <td>{{ adviser_list_dissertation.dissertation.get_status_display }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.offer_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -107,7 +107,7 @@
                     <td><a href="{% url 'manager_dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">{{ adviser_list_dissertation.dissertation.title }}</a></td>
                     <td>{{ adviser_list_dissertation.dissertation.author }}</td>
                     <td>{{ adviser_list_dissertation.dissertation.get_status_display }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.offer_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -130,7 +130,7 @@
                     <td><a href="{% url 'manager_dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">{{ adviser_list_dissertation.dissertation.title }}</a></td>
                     <td>{{ adviser_list_dissertation.dissertation.author }}</td>
                     <td>{{ adviser_list_dissertation.dissertation.get_status_display }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.offer_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -153,7 +153,7 @@
                     <td><a href="{% url 'manager_dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">{{ adviser_list_dissertation.dissertation.title }}</a></td>
                     <td>{{ adviser_list_dissertation.dissertation.author }}</td>
                     <td>{{ adviser_list_dissertation.dissertation.get_status_display }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.offer_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
@@ -176,7 +176,7 @@
                     <td><a href="{% url 'manager_dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">{{ adviser_list_dissertation.dissertation.title }}</a></td>
                     <td>{{ adviser_list_dissertation.dissertation.author }}</td>
                     <td>{{ adviser_list_dissertation.dissertation.get_status_display }}</td>
-                    <td>{{ adviser_list_dissertation.dissertation.offer_year_start }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year }}</td>
                   </tr>
                 {% endfor %}
               </table>
