OSIS-1666 modification templates

--- a/templates/manager_informations_detail_list_wait.html
+++ b/templates/manager_informations_detail_list_wait.html
@@ -59,7 +59,7 @@
                     <th>{% trans 'dissertation_title' %}</th>
                     <th>{% trans 'author'%}</th>
                     <th>{% trans 'status'%}</th>
-                    <th>{% trans 'offer'%}</th>
+                    <th>{% trans 'education_groups'%}</th>
                     <th>{% trans 'year_start'%}</th>
                     <th>{% trans 'proposition_dissertation'%}</th>
                 </thead>
