OSIS-1666 modification des templates part 3

--- a/templates/proposition_dissertations_list_created.html
+++ b/templates/proposition_dissertations_list_created.html
@@ -86,9 +86,9 @@
                       {% endif %}
                     </td>
                     <td>
-                      {% for prop_diss_education_group in proposition_dissertation.topic_education_group_set.all %}
+                      {% for prop_diss_education_group in proposition_dissertation.topiceducationgroup_set.all %}
                             {{ prop_diss_education_group.education_group.most_recent_acronym }}
-                        {% if !forloop.last %}
+                        {% if not forloop.last %}
                             -
                         {% endif %}
                       {% endfor %}
