Suite des modifications des templates listes de dissertation

--- a/templates/dissertations_list.html
+++ b/templates/dissertations_list.html
@@ -51,7 +51,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations %}
@@ -94,7 +94,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_copro %}
@@ -137,7 +137,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_reader %}
@@ -180,7 +180,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_accompanist %}
@@ -223,7 +223,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_internship %}
@@ -266,7 +266,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_president %}
