--- a/templates/manager_dissertations_wait_commission_list.html
+++ b/templates/manager_dissertations_wait_commission_list.html
@@ -61,7 +61,7 @@
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
                   <th>{% trans 'year_start'%}</th>
-                  <th>{% trans 'offer'%}</th>
+                  <th>{% trans 'education_groups'%}</th>
                   <th>{% trans 'proposition_dissertation'%}</th>
                   <th>{% trans 'action'%}</th>
                 </tr>
@@ -216,8 +216,8 @@
                 },
                 {"data":"author"},
                 {"data":"status"},
-                {"data":"offer_year"},
-                {"data":"offer"},
+                {"data":"education_group_year"},
+                {"data":"education_groups"},
                 {"data":"proposition_dissertation"},
                 {
                     "orderable":false,
