--- a/templates/manager_dissertations_wait_recep_list.html
+++ b/templates/manager_dissertations_wait_recep_list.html
@@ -58,7 +58,7 @@
           <th>{% trans 'title'%}</th>
           <th>{% trans 'author'%}</th>
           <th>{% trans 'status'%}</th>
-          <th>{% trans 'offer'%}</th>
+          <th>{% trans 'education_groups'%}</th>
           <th>{% trans 'year_start'%}</th>
           <th>{% trans 'proposition_dissertation'%}</th>
           <th>{% trans 'action'%}</th>
