--- a/templates/dissertations_wait_list.html
+++ b/templates/dissertations_wait_list.html
@@ -52,7 +52,7 @@
                       <th>{% trans 'dissertation_title'%}</th>
                       <th>{% trans 'author'%}</th>
                       <th>{% trans 'status'%}</th>
-                      <th>{% trans 'offer'%}</th>
+                      <th>{% trans 'education_groups'%}</th>
                       <th>{% trans 'year_start'%}</th>
                     </tr>
                     {% for dissertation in roles_list_dissertations %}
