--- a/templates/manager_informations_detail_list.html
+++ b/templates/manager_informations_detail_list.html
@@ -54,7 +54,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer_year_start'%}</th>
+                  <th>{% trans 'education_group_year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_pro %}
                   <tr>
@@ -77,7 +77,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer_year_start'%}</th>
+                  <th>{% trans 'education_group_year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_copro %}
                   <tr>
@@ -100,7 +100,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer_year_start'%}</th>
+                  <th>{% trans 'education_group_year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_reader %}
                   <tr>
@@ -123,7 +123,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer_year_start'%}</th>
+                  <th>{% trans 'education_group_year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_accompanist %}
                   <tr>
@@ -146,7 +146,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer_year_start'%}</th>
+                  <th>{% trans 'education_group_year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_internship %}
                   <tr>
@@ -169,7 +169,7 @@
                   <th>{% trans 'dissertation_title'%}</th>
                   <th>{% trans 'author'%}</th>
                   <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer_year_start'%}</th>
+                  <th>{% trans 'education_group_year_start'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_president %}
                   <tr>
