[OSIS-2148] use parameters instead of settings terms

--- a/templates/education_group_parameters.html
+++ b/templates/education_group_parameters.html
@@ -34,6 +34,6 @@
 {% block content %}
   <div class="page-header">
     <h2>{% trans 'parameters' %}</h2>
-    Education group SETTINGS page :)
+    Education group parameters page :)
   </div>
 {% endblock %}
