[OSIS-2148] translation text and home link title

--- a/templates/dissertations.html
+++ b/templates/dissertations.html
@@ -122,7 +122,7 @@
           <div class="col-md-5">
             <h4 class="media-heading">
                 <a href="{% url 'manager_offer_parameters' %}" id="lnk_manager_offer_parameters" >
-                    {% trans 'parameters' %}
+                    {% trans 'settings_by_education_group' %}
                 </a>
             </h4>
             <p>{% trans 'desc_lnk_manager_offer_parameters' %}</p>
