--- a/templates/settings_by_education_group.html
+++ b/templates/settings_by_education_group.html
@@ -29,11 +29,11 @@
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'student_path' %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li class="active">{% trans 'parameters' %}</li>
+  <li class="active">{% trans 'settings_by_education_group' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'parameters' %}</h2>
+    <h2>{% trans 'settings_by_education_group' %}</h2>
     Education group parameters page :)
   </div>
 {% endblock %}
