[OSIS-2148] Adding settings_by_education_group view tests

--- a/templates/settings_by_education_group.html
+++ b/templates/settings_by_education_group.html
@@ -34,6 +34,7 @@
 {% block content %}
   <div class="page-header">
     <h2>{% trans 'settings_by_education_group' %}</h2>
-    Education group parameters page :)
+    Liste de mes educations groups :
+    {{ current_user_education_group_ids }}
   </div>
 {% endblock %}
