OSIS-1666 ajout templates/manager_students_list

--- a/templates/manager_students_list.html
+++ b/templates/manager_students_list.html
@@ -98,7 +98,7 @@
                                             {{ dissertation|truncatechars:60 }}</a>
                                         </div>
                                         <div class="pull-left col-xs-2 div_in_datatable">
-                                            <span class="label label-default pull-right">[{{ dissertation.education_group_year_start.most_recent_acronym }}]</span>
+                                            <span class="label label-default pull-right">[{{ dissertation.education_group_year_start.acronym }}]</span>
                                             <br>
                                         </div>
                                     </div>
