[OSIS-2148] resolve reviews comments

--- a/templates/settings_by_education_group_edit.html
+++ b/templates/settings_by_education_group_edit.html
@@ -77,6 +77,8 @@
                            name="end_visibility_proposition" id="txt_end_visibility_proposition">
                     </div>
                 </div>
+                <div class="col-md-4">
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -107,6 +109,8 @@
                            value="{{ form.end_visibility_dissertation.value|date:'d/m/Y' }}"
                            name="end_visibility_dissertation" id="txt_end_visibility_dissertation">
                     </div>
+                </div>
+                <div class="col-md-4">
                 </div>
             </div>
             <div class="row">
@@ -139,6 +143,8 @@
                            name="end_jury_visibility" id="txt_end_jury_visibility">
                     </div>
                 </div>
+                <div class="col-md-4">
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -169,6 +175,8 @@
                            value="{{ form.end_edit_title.value|date:'d/m/Y' }}"
                            name="end_edit_title" id="txt_end_edit_title">
                     </div>
+                </div>
+                <div class="col-md-4">
                 </div>
             </div>
             <h3>{% trans 'parameters_others'%}</h3>
