[OSIS-2148] skip empty education group

--- a/templates/settings_by_education_group.html
+++ b/templates/settings_by_education_group.html
@@ -212,6 +212,13 @@
                 </table>
             </td>
           </tr>
+            {% empty %}
+            <tr>
+                <td colspan="3">
+                    -
+                </td>
+            </tr>
+
         {% endfor %}
         </tbody>
       </table>
