--- a/templates/manager_students_list.html
+++ b/templates/manager_students_list.html
@@ -33,7 +33,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'student_path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
   <li class="active">{% trans 'students' as students_title %}{{ students_title|title }}</li>
 {% endblock %}
