--- a/templates/manager_dissertations_detail_updates.html
+++ b/templates/manager_dissertations_detail_updates.html
@@ -29,7 +29,7 @@
 {% load tz %}
 
 {% block breadcrumb %}
-<li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'student_path' %}</a></li>
+<li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
 <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
 <li><a href="{% url 'manager_dissertations_list' %}" id="lnk_propositions">{% trans 'dissertations' %}</a></li>
 <li class="active">{{ dissertation.title|truncatechars:24 }}</li>
