--- a/templates/manager_informations_list.html
+++ b/templates/manager_informations_list.html
@@ -31,7 +31,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'student_path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
   <li class="active">{% trans 'teachers' %}</li>
 {% endblock %}
