--- a/templates/manager_proposition_dissertations_jury_edit.html
+++ b/templates/manager_proposition_dissertations_jury_edit.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'student_path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
   <li><a href="{% url 'manager_proposition_dissertations' %}" id="lnk_manager_proposition_dissertations">{% trans 'proposition_dissertations' %}</a></li>
   <li class="active">{% trans 'new_or_edit_jury_proposition_dissertation' %}</li>
